Change the menu name

--- a/i18n/en.toml
+++ b/i18n/en.toml
@@ -2,13 +2,13 @@
 # Menu
 ###################
 [menuCategories]
-other = "Categories"
+other = "categories"
 
 [menuTags]
-other = "Tags"
+other = "tags"
 
 [menuProjects]
-other = "Projects"
+other = "projects"
 
 [menuBurgerTitle]
 other = "Menu"
